Fix spacing at top of page

--- a/style.css
+++ b/style.css
@@ -55,15 +55,16 @@ h2 {
 
 #content {
   display: flex;
+  justify-content: space-between;
 }
 #text {
   word-wrap: break-word;
 }
 
 #image {
-  align-self: flex-end;
   height: 400px;
   width: auto;
+  margin: 0% 10%;
 }
 .signup-button {
   cursor: pointer;
